OpenRewrite code modifications
Signed-off-by: Johannes Echterhoff <echterhoff@interactive-instruments.de>